@@ -2,20 +2,24 @@
 <project version="4">
   <component name="ChangeListManager">
     <list default="true" id="92756fba-9448-4539-aaa4-1deb2265cfe0" name="Default" comment="">
-      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/.idea/misc.xml" afterPath="$PROJECT_DIR$/.idea/misc.xml" />
-      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/css/opus-primus-layout.css" afterPath="$PROJECT_DIR$/css/opus-primus-layout.css" />
+      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/changelog.txt" afterPath="$PROJECT_DIR$/changelog.txt" />
+      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/js/opus-primus-full-size-video.js" afterPath="$PROJECT_DIR$/js/opus-primus-full-size-video.js" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/.idea/workspace.xml" afterPath="$PROJECT_DIR$/.idea/workspace.xml" />
     </list>
     <ignored path="opus-primus.iws" />
     <ignored path=".idea/workspace.xml" />
-    <file path="/Dummy.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363450378132" ignored="false" />
-    <file path="/opus-primus-header.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363450194734" ignored="false" />
-    <file path="$PROJECT_DIR$/../wpfirstaid/opus-primus-header.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363450195641" ignored="false" />
+    <file path="/Dummy.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363452194865" ignored="false" />
+    <file path="/opus-primus-header.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363452033046" ignored="false" />
+    <file path="$PROJECT_DIR$/../wpfirstaid/opus-primus-header.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363452033046" ignored="false" />
     <file path="$PROJECT_DIR$/../wpfirstaid/wpfirstaid-header-layout.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363447365297" ignored="false" />
     <file path="$PROJECT_DIR$/../wpfirstaid/functions.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363447510303" ignored="false" />
     <file path="$PROJECT_DIR$/../wpfirstaid/wpfa-header-layout.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363450353618" ignored="false" />
     <file path="/wpfa-header-layout.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363450212923" ignored="false" />
-    <file path="$PROJECT_DIR$/../wpfirstaid/wpfa-opus-primus.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363447980947" ignored="false" />
+    <file path="$PROJECT_DIR$/../wpfirstaid/wpfa-opus-primus.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363452143098" ignored="false" />
+    <file path="/a.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363450596618" ignored="false" />
+    <file path="/wpfa-opus-primus.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363452106064" ignored="false" />
+    <file path="/opus-primus-full-size-video.js" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363453270732" ignored="false" />
+    <file path="/changelog.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363453503615" ignored="false" />
     <option name="TRACKING_ENABLED" value="true" />
     <option name="SHOW_DIALOG" value="false" />
     <option name="HIGHLIGHT_CONFLICTS" value="true" />
@@ -35,24 +39,20 @@
   </component>
   <component name="FileEditorManager">
     <leaf>
-      <file leaf-file-name="opus-primus-layout.css" pinned="false" current="true" current-in-tab="true">
-        <entry file="file://$PROJECT_DIR$/css/opus-primus-layout.css">
+      <file leaf-file-name="opus-primus-full-size-video.js" pinned="false" current="false" current-in-tab="false">
+        <entry file="file://$PROJECT_DIR$/js/opus-primus-full-size-video.js">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="181" column="5" selection-start="6067" selection-end="6067" vertical-scroll-proportion="4.45942">
+            <state line="35" column="37" selection-start="1264" selection-end="1300" vertical-scroll-proportion="0.0">
               <folding />
             </state>
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="class.OpusPrimusStructures.php" pinned="false" current="false" current-in-tab="false">
-        <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusStructures.php">
+      <file leaf-file-name="changelog.txt" pinned="false" current="true" current-in-tab="true">
+        <entry file="file://$PROJECT_DIR$/changelog.txt">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="575" column="0" selection-start="23208" selection-end="23208" vertical-scroll-proportion="-93.5">
-              <folding>
-                <marker date="1362889138981" expanded="true" signature="20431:20727" placeholder="..." />
-                <marker date="1362889138981" expanded="true" signature="25966:26365" placeholder="..." />
-                <marker date="1362889138981" expanded="true" signature="27065:27473" placeholder="..." />
-              </folding>
+            <state line="12" column="0" selection-start="419" selection-end="419" vertical-scroll-proportion="0.29565218">
+              <folding />
             </state>
           </provider>
         </entry>
@@ -75,7 +75,6 @@
   <component name="IdeDocumentHistory">
     <option name="changedFiles">
       <list>
-        <option value="$PROJECT_DIR$/includes/class.OpusPrimusPosts.php" />
         <option value="$PROJECT_DIR$/search.php" />
         <option value="$PROJECT_DIR$/archive.php" />
         <option value="$PROJECT_DIR$/index.php" />
@@ -84,13 +83,14 @@
         <option value="$PROJECT_DIR$/css/opus-primus.css" />
         <option value="$PROJECT_DIR$/includes/class.OpusPrimusStructures.php" />
         <option value="$PROJECT_DIR$/includes/class.OpusPrimusHeader.php" />
-        <option value="$PROJECT_DIR$/changelog.txt" />
         <option value="$PROJECT_DIR$/style.css" />
         <option value="$PROJECT_DIR$/includes/opus-ignite.php" />
         <option value="$PROJECT_DIR$/includes/class.OpusPrimusHeaders.php" />
         <option value="$PROJECT_DIR$/opus-primus-header.php" />
         <option value="$PROJECT_DIR$/includes/class.OpusPrimusBreadcrumbs.php" />
         <option value="$PROJECT_DIR$/css/opus-primus-layout.css" />
+        <option value="$PROJECT_DIR$/js/opus-primus-full-size-video.js" />
+        <option value="$PROJECT_DIR$/changelog.txt" />
       </list>
     </option>
   </component>
@@ -174,25 +174,7 @@
               <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.PsiDirectoryNode" />
             </PATH_ELEMENT>
             <PATH_ELEMENT>
-              <option name="myItemId" value="includes" />
-              <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.PsiDirectoryNode" />
-            </PATH_ELEMENT>
-          </PATH>
-          <PATH>
-            <PATH_ELEMENT>
-              <option name="myItemId" value="opus-primus" />
-              <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.ProjectViewProjectNode" />
-            </PATH_ELEMENT>
-            <PATH_ELEMENT>
-              <option name="myItemId" value="opus-primus" />
-              <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.ProjectViewModuleNode" />
-            </PATH_ELEMENT>
-            <PATH_ELEMENT>
-              <option name="myItemId" value="opus-primus" />
-              <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.PsiDirectoryNode" />
-            </PATH_ELEMENT>
-            <PATH_ELEMENT>
-              <option name="myItemId" value="css" />
+              <option name="myItemId" value="js" />
               <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.PsiDirectoryNode" />
             </PATH_ELEMENT>
           </PATH>
@@ -209,10 +191,10 @@
     <property name="FileHistory.git4idea.history.GitHistoryProvider_treeOrder1" value="1" />
     <property name="FileHistory.git4idea.history.GitHistoryProvider_treeOrder2" value="2" />
     <property name="FileHistory.git4idea.history.GitHistoryProvider_treeWidth0" value="293" />
-    <property name="options.lastSelected" value="web.server" />
+    <property name="options.lastSelected" value="editor.preferences.appearance" />
     <property name="FileHistory.git4idea.history.GitHistoryProvider_flatOrder1" value="1" />
     <property name="FileHistory.git4idea.history.GitHistoryProvider_flatOrder0" value="0" />
-    <property name="last_opened_file_path" value="$PROJECT_DIR$/../wpfirstaid" />
+    <property name="last_opened_file_path" value="$PROJECT_DIR$/../../../../BNS-Projects/wp-content/themes/shelter" />
     <property name="FileHistory.git4idea.history.GitHistoryProvider_flatWidth2" value="293" />
     <property name="FileHistory.git4idea.history.GitHistoryProvider_flatWidth3" value="967" />
     <property name="FileHistory.git4idea.history.GitHistoryProvider_treeWidth3" value="967" />
@@ -275,6 +257,15 @@
               <option name="path" value="/wp-includes" />
             </ExcludedPath>
           </excludedPaths>
+        </serverdata>
+      </server>
+      <server id="f0a59fc2-857b-47af-99bb-ab8ddca8464d">
+        <serverdata>
+          <mappings>
+            <mapping local="$PROJECT_DIR$/../../../wp-admin" />
+            <mapping local="$PROJECT_DIR$" />
+            <mapping local="$PROJECT_DIR$/../../../wp-includes" />
+          </mappings>
         </serverdata>
       </server>
       <server id="fda54b25-2dd9-4a08-b46e-911bac06e665">
@@ -1701,7 +1692,11 @@
       <created>1362961087078</created>
       <updated>1362961087078</updated>
     </task>
-    <option name="localTasksCounter" value="329" />
+    <task id="LOCAL-00329" summary="* Changed 'leftmenu' to 'left-menu' (not used, yet)">
+      <created>1363450543742</created>
+      <updated>1363450543742</updated>
+    </task>
+    <option name="localTasksCounter" value="330" />
     <servers>
       <GitHub shared="false">
         <commitMessageFormat>{id} {summary}</commitMessageFormat>
@@ -1806,7 +1801,7 @@
     <option name="WRAP_WHEN_TYPING_REACHES_RIGHT_MARGIN" value="false" />
     <option name="FORCE_NON_EMPTY_COMMENT" value="false" />
     <option name="CLEAR_INITIAL_COMMIT_MESSAGE" value="false" />
-    <option name="LAST_COMMIT_MESSAGE" value="* Add some text filters for the 'Home' and 'Sticky&quot; text in the post breadcrumbs trail" />
+    <option name="LAST_COMMIT_MESSAGE" value="* Changed 'leftmenu' to 'left-menu' (not used, yet)" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="false" />
     <option name="OPTIMIZE_IMPORTS_BEFORE_PROJECT_COMMIT" value="false" />
     <option name="CHECK_FILES_UP_TO_DATE_BEFORE_COMMIT" value="false" />
@@ -1820,7 +1815,6 @@
     <option name="UPDATE_FILTER_BY_SCOPE" value="false" />
     <option name="SHOW_FILE_HISTORY_AS_TREE" value="false" />
     <option name="FILE_HISTORY_SPLITTER_PROPORTION" value="0.6" />
-    <MESSAGE value="* Modified action hooks to more semantic naming convention: `opus_&lt;section&gt;_&lt;placement&gt;` (part I)" />
     <MESSAGE value="* Modified action hooks to more semantic naming convention: `opus_&lt;section&gt;_&lt;placement&gt;` (part II)" />
     <MESSAGE value="* Change classes in '404.php' from using underscores to using hyphens" />
     <MESSAGE value="* Added `clear: both;` to 'img.aligncenter, img.center' to address Firefox issue when when a Featured Image and a large in post image are too close together." />
@@ -1845,16 +1839,12 @@
     <MESSAGE value="* Do not display &quot;Standard&quot; Post Format  name in breadcrumb trail" />
     <MESSAGE value="* Add sticky post step to breadcrumb trail" />
     <MESSAGE value="* Add some text filters for the 'Home' and 'Sticky&quot; text in the post breadcrumbs trail" />
+    <MESSAGE value="* Changed 'leftmenu' to 'left-menu' (not used, yet)" />
   </component>
   <component name="XDebuggerManager">
     <breakpoint-manager />
   </component>
   <component name="editorHistoryManager">
-    <entry file="file://$PROJECT_DIR$/opus-primus-archive.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0" />
-      </provider>
-    </entry>
     <entry file="file://$PROJECT_DIR$/index.php">
       <provider selected="true" editor-type-id="text-editor">
         <state line="52" column="67" selection-start="1652" selection-end="1652" vertical-scroll-proportion="0.02560241" />
@@ -1880,11 +1870,6 @@
         <state line="40" column="0" selection-start="1327" selection-end="1327" vertical-scroll-proportion="3.2307692" />
       </provider>
     </entry>
-    <entry file="file://$PROJECT_DIR$/changelog.txt">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="1" column="20" selection-start="54" selection-end="54" vertical-scroll-proportion="0.025110783" />
-      </provider>
-    </entry>
     <entry file="file://$PROJECT_DIR$/style.css">
       <provider selected="true" editor-type-id="text-editor">
         <state line="4" column="18" selection-start="711" selection-end="711" vertical-scroll-proportion="-0.8788774" />
@@ -1893,11 +1878,6 @@
     <entry file="file://$PROJECT_DIR$/includes/opus-ignite.php">
       <provider selected="true" editor-type-id="text-editor">
         <state line="65" column="49" selection-start="2327" selection-end="2327" vertical-scroll-proportion="0.33433735" />
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusHeaders.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="186" column="53" selection-start="4986" selection-end="4986" vertical-scroll-proportion="-20.461538" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/opus-primus-header.php">
@@ -1922,18 +1902,39 @@
     </entry>
     <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusStructures.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="575" column="0" selection-start="23208" selection-end="23208" vertical-scroll-proportion="-93.5">
+        <state line="575" column="0" selection-start="23208" selection-end="23208" vertical-scroll-proportion="3.734255">
           <folding>
-            <marker date="1362889138981" expanded="true" signature="20431:20727" placeholder="..." />
-            <marker date="1362889138981" expanded="true" signature="25966:26365" placeholder="..." />
-            <marker date="1362889138981" expanded="true" signature="27065:27473" placeholder="..." />
+            <marker date="1362889138981" expanded="true" signature="-1:-1" placeholder="..." />
+            <marker date="1362889138981" expanded="true" signature="-1:-1" placeholder="..." />
+            <marker date="1362889138981" expanded="true" signature="-1:-1" placeholder="..." />
           </folding>
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/css/opus-primus-layout.css">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="181" column="5" selection-start="6067" selection-end="6067" vertical-scroll-proportion="4.45942">
+        <state line="181" column="5" selection-start="6067" selection-end="6067" vertical-scroll-proportion="0.0">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusHeaders.php">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="154" column="35" selection-start="4070" selection-end="4070" vertical-scroll-proportion="0.6551205">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/js/opus-primus-full-size-video.js">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="35" column="37" selection-start="1264" selection-end="1300" vertical-scroll-proportion="0.0">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/changelog.txt">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="12" column="0" selection-start="419" selection-end="419" vertical-scroll-proportion="0.29565218">
           <folding />
         </state>
       </provider>
