@@ -1,5 +1,5 @@
 === Opus Primus changelog.txt ===
-Last revised March 9, 2013
+Last revised March 16, 2013
 Please note, the Opus Primus copyright can be found at the end of this file.
 
 == Version 1.1 ==
@@ -10,6 +10,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Added `anchor_title_text` for use with `excerpt_more_link` and permalinks in the post meta details
 * Added Breadcrumbs trails to pages and posts
 * Created Header class
+* Limit width generated by "Full Size Video" JavaScript to a maximum of 1000px
 * Refactored Structures class to put `site_title`, `site_description`, and `custom_header_image` into Header class
 * Refactored `opus-primus-header` to reflect class/method changes of Structures and Header
 
